--- a/bash/config
+++ b/bash/config
@@ -47,14 +47,17 @@ BCYAN='\e[46m'
 BWHITE='\e[47m'
 
 # Prompts
-STD_PS1="[\u@\h \W]\$ "
-DEV_PS1="\n\[$RED\]\u@\h:\W \[$YELLOW\]\$(vcprompt)\[$NO_COLOR\] \n\$ "
+
+prompt[1]="\h:\W \u\$ " # Default prompt
+prompt[2]="[\u@\h \W]\$ " # Standard prompt with more info
+# 3: Colored prompt with VCS/Branch information
+prompt[3]="\[$RED\]\u@\h:\W \[$YELLOW\]\$(vcprompt)\[$NO_COLOR\] \n\$ " 
+# 4: Colored prompt with VCS/Branch information. Blank line before.
+prompt[4]="\n\[$RED\]\u@\h:\W \[$YELLOW\]\$(vcprompt)\[$NO_COLOR\] \n\$ "
+default_prompt=3
+
 if [[ -z $CRNT_PS1 ]]; then
-  PS1=$STD_PS1
-  CRNT_PS1='STD'
-else
-  case $CRNT_PS1 in
-    'STD' ) PS1=$STD_PS1;;
-    'DEV' ) PS1=$DEV_PS1;;
-  esac
+  current_ps1=$default_prompt
 fi
+
+PS1=${prompt[$current_ps1]}
