--- a/bash/config
+++ b/bash/config
@@ -46,17 +46,23 @@ BMAGENTA='\e[45m'
 BCYAN='\e[46m'
 BWHITE='\e[47m'
 
-# Prompts
+# Prompt colors
+prompt_color=$WHITE
+case $HOSTNAME in
+  'leela' ) prompt_color=$RED ;;
+  'com-www' ) prompt_color=$GREEN ;;
+esac
 
+# Prompts
 prompt[1]="\h:\W \u\$ " # Default prompt
 prompt[2]="[\u@\h \W]\$ " # Standard prompt with more info
 # 3: Colored prompt with VCS/Branch information
-prompt[3]="\[$RED\]\u@\h:\W \[$YELLOW\]\$(vcprompt)\[$NO_COLOR\] \n\$ " 
+prompt[3]="\[$prompt_color\]\u@\h:\W \[$YELLOW\]\$(vcprompt)\[$NO_COLOR\] \n\$ "
 # 4: Colored prompt with VCS/Branch information. Blank line before.
 prompt[4]="\n\[$RED\]\u@\h:\W \[$YELLOW\]\$(vcprompt)\[$NO_COLOR\] \n\$ "
 default_prompt=3
 
-if [[ -z $CRNT_PS1 ]]; then
+if [[ -z $current_ps1 ]]; then
   current_ps1=$default_prompt
 fi
 
