--- a/bash/config
+++ b/bash/config
@@ -49,10 +49,17 @@ fi
 # Prompts
 prompt[1]="\h:\W \u\$ " # Default prompt
 prompt[2]="[\u@\h \W]\$ " # Standard prompt with more info
-# 3: Colored prompt with VCS/Branch information
-prompt[3]="\[$prompt_color\]\u@\h:\W \[$YELLOW\]\$(vcprompt)\[$NO_COLOR\] \n\$ "
-# 4: Colored prompt with VCS/Branch information. Blank line before.
-prompt[4]="\n\[$prompt_color\]\u@\h:\W \[$YELLOW\]\$(vcprompt)\[$NO_COLOR\] \n\$ "
+if [[ -e ~/.dotfiles/bin/vcprompt ]]; then # If vcprompt is installed, add it to the prompt
+  # 3: Colored prompt with VCS/Branch information
+  prompt[3]="\[$prompt_color\]\u@\h:\W \[$YELLOW\]\$(vcprompt)\[$NO_COLOR\] \n\$ "
+  # 4: Colored prompt with VCS/Branch information. Blank line before.
+  prompt[4]="\n\[$prompt_color\]\u@\h:\W \[$YELLOW\]\$(vcprompt)\[$NO_COLOR\] \n\$ "
+else
+  # 3: Colored prompt
+  prompt[3]="\[$prompt_color\]\u@\h:\W \[$NO_COLOR\] \n\$ "
+  # 4: Colored prompt. Blank line before.
+  prompt[4]="\n\[$prompt_color\]\u@\h:\W \[$NO_COLOR\] \n\$ "
+fi
 default_prompt=3
 
 # Set prompt
